# yt-style-retaining-translator

./: .flake8  .gitignore  .pre-commit-config.yaml  README.MD  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  style_checks.yml
docker/training/: Dockerfile
orchestration/: data_train.mk  inference.mk
src/: constants.py  logger_definition.py
src/bash/: run_in_conda.sh
src/downloaders/: download_youtube.py
src/orchestation/: inference_pipeline.py
src/postprocessing/: finalize_video.py  lip_sync.py  stitch_translated_audio.py  synchronize_audio_video_segments.py
src/preprocessing/: convert_audio.py  coqui_formatting.py  segment_audio.py
src/translation/: translate_audio.py  translate_transcription.py
src/translation/llm_service/: llm-services-config.yaml  services.py  speakers-config.yaml
src/tts/: inference.py  train.py  xtts_inference.py
src/tts/configs/: vits-config.json  xttsv2-config.json
src/tts/trainers/: train_vits.py  train_vits_tolkien.py  train_xtts_v2.py
