[project]
name = "yt-style-retaining-translator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.13"
dependencies = [
    "fastapi>=0.115.12",
    "gcloud>=0.18.3",
    "numpy==2.2.5",
    "openai-whisper>=20240930",
    "pandas>=2.2.3",
    "pydub>=0.25.1",
    "torch==2.7.0",
    "torchaudio==2.7.0",
    "transformers>=4.51.3",
    "webrtcvad>=2.0.10",
    "whisperx>=3.3.1",
    "yt-dlp>=2025.4.30",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "ipdb>=0.13.13",
    "ipykernel>=6.29.5",
    "isort>=6.0.1",
    "jupyterlab>=4.4.0",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.2",
    "pytest>=8.3.5",
]

[tool.isort]
profile = "black"
skip = [".venv", "data", ".vscode", ".github"]
line_length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
